# jupyterlab

./: Dockerfile  Dockerfile.gpu.base  README.md  pyproject.toml  run.sh
jupyter-settings/: bashrc
jupyter-settings/.ipynb_checkpoints/: jupyter_notebook_config-checkpoint.py
jupyter-settings/jupyter_user_settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
jupyter-settings/jupyter_user_settings/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
jupyter-settings/jupyter_user_settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
jupyter-settings/jupyter_user_settings/@ryantam626/jupyterlab_code_formatter/: settings.jupyterlab-settings
jupyterlab/: Dockerfile  Dockerfile.base  Dockerfile.cpu.base  Readme.md  build_and_push.sh  docker-compose.yml  env_file.env  ipython_config.py  jupyter_notebook_config.py  pyproject.toml  requirements.txt  run.sh
jupyterlab-gpu/: Dockerfile  Dockerfile.base  Readme.md  build_and_push.sh  docker-compose.yml  env_file.env  run.sh
jupyterlab-gpu/jupyter_user_settings/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
jupyterlab/.ipynb_checkpoints/: Dockerfile-checkpoint
jupyterlab/.jupyter/lab/user-settings/jupyterlab-tailwind-theme/: plugin.jupyterlab-settings
jupyterlab/.jupyter/lab/workspaces/: auto-q-549e.jupyterlab-workspace
jupyterlab/jupyter_user_settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
jupyterlab/settings/: ipython_config.py  jupyter_notebook_config.py  ptpython_config.py
jupyterlab/settings/jupyter_user_settings/@jupyterlab/console-extension/: tracker.jupyterlab-settings
jupyterlab/settings/jupyter_user_settings/@ryantam626/jupyterlab_code_formatter/: settings.jupyterlab-settings
python3/: Dockerfile  docker-compose.yml  requirements.txt
python3/opt/: sample.py
